syntax = "proto3";

package doshbank;

// Definición del servicio para el Dosh Bank
service DoshBank {
  // Método para obtener el monto acumulado
  rpc GetTotalAmount (TotalAmountRequest) returns (TotalAmountResponse) {}
}

// Mensaje de solicitud para obtener el monto acumulado
message TotalAmountRequest {
  // Aquí puedes incluir cualquier campo necesario para la solicitud
}

// Mensaje de respuesta que contiene el monto acumulado
message TotalAmountResponse {
  int32 amount = 1;
}
