syntax = "proto3";

package bank;

option go_package = "prueba1/proto"

message GetTotalRequest {}

message GetTotalResponse {
    int32 total = 1;
}

service BankService {
    rpc GetTotal(GetTotalRequest) returns (GetTotalResponse);
}
